@@ -1,13 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-
-<html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<title>Samples</title>
-</head>
-
-<body>
-<h1>Samples</h1>
-TODO: Add content here.
-</body>
-</html>
